canvas-editor.scss
$canvas_editor_min_height: 400; // px

.canvas-editor-view {
	float: right;

	label i {
		margin-right: .5rem;
	}
}

.canvas-editor {
	margin-top: 2rem;
	text-align: left;
	transform: scaleX(1); /* position: fixed is relative to transforms too, so we can use this to contain them */
	min-height: px_to_rem($canvas_editor_min_height);
	
	.canvas-editor-bordered {
		//padding: 0.375rem 0.75rem;
		//border: 1px solid lightgrey;
		//border-radius: 4px;
		overflow: hidden;
		border: 0;
		outline: 1px solid lightgrey;
		min-height: px_to_rem($canvas_editor_min_height);
	}

	> .collapsible {
		min-height: px_to_rem($canvas_editor_min_height);
	}

	.collapsible {
		margin-bottom: 1rem;

		.collapsible-summary {
			padding: .5rem 1rem;
			border: 1px solid lightgrey;
			border-radius: 4px;

			.collapsible-title {
				font-size: px_to_rem(18);
				font-weight: bold;
				color: #444;
				margin: 0;
			}

			.buttons {

				.btn {
					border-radius: 4px;
					padding: .75rem 1rem !important;
				}

			}

		}

		.collapsible-content {
			padding: 0 1rem 1rem 1rem;
			border-color: lightgrey;
		}

	}

	.btn-add-component {
		clear: both;
		margin-top: 1rem;
		display: block;

		i {
			margin-right: .5rem;
		}
	}
	
	*[admin-module=true]{
		min-width: 20px;
		min-height: 20px;
		&:hover{
			outline: 2px solid lightblue !important;
		}
	}
	
	.canvas-editor-text{
		display: inline-block;
		min-width: 50px;
		min-height: 1em;
		height: auto;
	}
	
	.module-info{
		margin-bottom: 5px;
		padding: 10px;
		border: 1px solid lightgrey;
	}
	
	.back-to-visual {
		margin-bottom: .75rem;
	}

}

.canvas-editor-popups{
	
	.value-link{
		color: #ddd;
		margin-left: 5px;
	}
	
	.context-menu{
		background: white;
		color: black;
		border: 1px solid lightgrey;
		padding: 10px;
		position: fixed;
		z-index: 1;
		
		.context-btn{
			margin-bottom: 10px;
			
			i{
				color: lightgrey;
				margin-right: 5px;
			}
			
			&:hover{
				cursor: pointer;
			}

			&:last-child {
				margin-bottom: 0;
			}
		}
	}
	
	.module-select-modal, .module-link-selection-modal{
		.module-group{
			margin-bottom: 10px;
		}
	
		.module-tile{
			border: 1px solid lightgrey;
			border-radius: 4px;
			text-align: center;
			padding: 20px;
			
			&:hover{
				cursor:pointer;
			}
		}
	}
	
	textarea.form-control {
		//@include input_field_styling;

		&.json-preview {
			@include font_size(12);
			font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace;
			min-height: 16rem;
			tab-size: 2;
		}
	}

}

html.admin.fullscreen-preview {

	.canvas-editor {
		position: fixed;
		left: 0;
		top: 0;
		z-index: 500000;
		background-color: #fff;
		margin-top: 0;
		width: 100%;
		height: 100%;
		overflow-y: auto;

		&::before {
			content: "";
			position: fixed;
			width: 0;
			height: 0;
			opacity: .65;
			border-right: 4rem solid transparent;
			border-bottom: 4rem solid transparent;
			border-left: 4rem solid #ff2121;
			border-top: 4rem solid #ff2121;
			z-index: 60000;
		}

		&::after {
			content: "Preview";
			position: fixed;
			color: #fff;
			z-index: 70000;
			left: 2.5rem;
			top: 2.5rem;
			transform: rotate(-45deg);
			margin-left: -1.5rem;
		}

		.canvas-editor-bordered {
			border: 0;
			border-radius: 0;
			padding: 0;
		}

	}

}

